<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- Application -->
    <string name="app_name">MigrateContacts</string>

    <!-- Contacts -->
    <string name="contacts_add">New</string>
    
    <!-- Contact Details -->
    <string name="activity_details">Contact Details</string>
    <string name="detail_fname_label">First Name:</string>
    <string name="detail_fname_hint">first name</string>
    <string name="detail_lname_label">Last Name:</string>
    <string name="detail_lname_hint">last name</string>
    <string name="detail_phone_label">Phone:</string>
    <string name="detail_phone_hint">phone number</string>
    <string name="detail_email_label">eMail:</string>
    <string name="detail_email_hint">email address</string>
    <string name="detail_update">Submit</string>
    <string name="detail_delete">Delete</string>
    <string name="name_required">A contact must have at least a first name</string>
    
    <!-- Prefs -->
    <string name="activity_prefs">Settings</string>
    <string name="prefs_title">Settings</string>
    <string name="prefs_heading">User</string>
    <string name="prefs_user_key">MigrateContacts.USER</string>
    <string name="prefs_user_title">Contacts user ID</string>

    <string name="resolve_title">Resolve Conflicts</string>
    <string name="resolve_conflict">Resolve</string>
    <string name="activity_resolve">Resolve Contact</string>
    <string name="resolve_field_header">Field</string>
    <string name="resolve_field_resolve">Resolved</string>
    <string name="activity_resolve_need_all_fields">You must resolve all fields.</string>

</resources>