<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
        >

    <GridLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:useDefaultMargins="true"
            android:alignmentMode="alignBounds"
            android:layout_alignParentTop="true"

            android:columnCount="2"
            >

        <TextView
                android:id="@+id/activity_resolve_resolve_header"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/resolve_field_resolve"
                android:textSize="@dimen/conflict_font_size"
                android:textStyle="bold"
                />
        <TextView
                android:id="@+id/activity_resolve_field_header"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/resolve_field_header"
                android:textSize="@dimen/conflict_font_size"
                android:textStyle="bold"
                />

        <CheckBox
                android:id="@+id/activity_resolve_fname_checkbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="4dip"
                android:layout_marginRight="4dp"
                />
        <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                >
            <TextView
                    android:id="@+id/activity_resolve_fname_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/detail_fname_label"
                    android:textSize="@dimen/conflict_font_size"
                    android:textStyle="bold"
                    />
            <TextView
                    android:id="@+id/activity_resolve_fname"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:hint="@string/detail_fname_hint"
                    android:textSize="@dimen/conflict_font_size"
                    android:textColor="@color/resolved"
                    android:visibility="gone"
                    />
            <Spinner
                    android:id="@+id/activity_resolve_fname_spinner"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:hint="@string/detail_fname_hint"
                    android:textSize="18sp"
                    android:visibility="gone"
                    />
        </LinearLayout>


        <CheckBox
                android:id="@+id/activity_resolve_lname_checkbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="4dip"
                android:layout_marginRight="4dp"
                />
        <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                >
            <TextView
                    android:id="@+id/activity_resolve_lname_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/detail_lname_label"
                    android:textSize="@dimen/conflict_font_size"
                    android:textStyle="bold"
                    />
            <TextView
                    android:id="@+id/activity_resolve_lname"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dip"
                    android:hint="@string/detail_lname_hint"
                    android:textSize="@dimen/conflict_font_size"
                    android:textColor="@color/resolved"
                    android:visibility="gone"
                    />
            <Spinner
                    android:id="@+id/activity_resolve_lname_spinner"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dip"
                    android:hint="@string/detail_lname_hint"
                    android:textSize="18sp"
                    android:visibility="gone"
                    />
        </LinearLayout>


        <CheckBox
                android:id="@+id/activity_resolve_phone_checkbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="4dip"
                />
        <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                >
            <TextView
                    android:id="@+id/activity_resolve_phone_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dip"
                    android:text="@string/detail_phone_label"
                    android:textSize="@dimen/conflict_font_size"
                    android:textStyle="bold"
                    />
            <TextView
                    android:id="@+id/activity_resolve_phone"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="4dip"
                    android:hint="@string/detail_phone_hint"
                    android:textSize="@dimen/conflict_font_size"
                    android:textColor="@color/resolved"
                    android:visibility="gone"
                    />
            <Spinner
                    android:id="@+id/activity_resolve_phone_spinner"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="4dip"
                    android:hint="@string/detail_phone_hint"
                    android:textSize="18sp"
                    android:visibility="gone"
                    />
        </LinearLayout>


        <CheckBox
                android:id="@+id/activity_resolve_email_checkbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="4dip"
                android:layout_marginRight="4dp"
                />
        <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                >
            <TextView
                    android:id="@+id/activity_resolve_email_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="6dip"
                    android:text="@string/detail_email_label"
                    android:textSize="@dimen/conflict_font_size"
                    android:textStyle="bold"
                    />
            <TextView
                    android:id="@+id/activity_resolve_email"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="4dip"
                    android:hint="@string/detail_email_hint"
                    android:textSize="@dimen/conflict_font_size"
                    android:textColor="@color/resolved"
                    android:visibility="gone"
                    />
            <Spinner
                    android:id="@+id/activity_resolve_email_spinner"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="4dip"
                    android:hint="@string/detail_email_hint"
                    android:textSize="18sp"
                    android:visibility="gone"
                    />

        </LinearLayout>


    </GridLayout>

    <Button
            android:id="@+id/activity_resolve_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:text="@string/resolve_conflict" />

</RelativeLayout>
